--- a/index.html
+++ b/index.html
@@ -60,15 +60,160 @@
       <ul class="main__list">
         <!-- <li class="main__item col-lg-4 col-md-4 col-sm-4">
           <div class="item__box">
+            <button class="item__wrap" data-bs-toggle="modal" href="#exampleModalToggle" role="button"></button>
             <img class="main__img" src="img/img01.jpg" alt="">
             <p class="main__desc"></p>
             <div class="main__btnpart">
-              <button>like soni</button>
-              <button>save</button>
+              <button><i class='bx bxs-heart'></i></button>
+              <button><i class='bx bxs-message-rounded-dots'></i></button>
             </div>
           </div>
         </li> -->
       </ul>
+    </div>
+    <div class="modal fade"  id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content" id="modal__box">
+          <div class="modal__headerr">
+            <div class="">
+              <img class="modal__left" src="" alt="">
+            </div>
+            <div class="modalright">
+              <div class="user__name">
+                <img class="modal__right-img" src="img/imgborde.jpg" alt="">
+                <span>muhammadali_eshonqulov</span>
+              </div>
+              <div class="main__modal">
+                <div class="user__name">
+                  <img class="modal__right-img" src="img/imgborde.jpg" alt="">
+                  <span>muhammadali_eshonqulov</span>
+                  <p class="comment">"Yuksalish" Madinai Munavvarada😊😊😊
+  
+                    ROBBIM barchamizni tez fursatlarda shu go'zal shaharga yetkazsin.
+                    
+                    Rasm uchun @ibrohim_muhammad_84 akamga tashakkur izhor qilaman.
+                    <a href="https://www.instagram.com/Yuksalish_leaders_academy/">@Yuksalish_Leaders_Academy
+                    </a>
+                  </p>
+                </div>
+                <div class="plus"><i class='bx bx-plus-circle' ></i></div>
+                <div class="user__name">
+                  <img class="modal__right-img" src="img/zabar.jpg" alt="">
+                  <span>zabardastovna</span> <span>Shu dõppidan topa olmayapman</span>
+                  <div class="d-flex">
+                    <a class="me-2" href="#">like</a>
+                    <a href="#">reply</a>
+                  </div>
+                </div>
+                <div class="user__name">
+                  <img class="modal__right-img" src="img/sattor.jpg" alt="">
+                  <span>abdusattor_ibroximov</span> <span>Shu dõppidan topa olmayapman</span>
+                  <div class="d-flex">
+                    <a class="me-2" href="#">like</a>
+                    <a href="#">reply</a>
+                  </div>
+                </div>
+                <div class="user__name">
+                  <img class="modal__right-img" src="img/bilol.jpg" alt="">
+                  <span>bilol_2704</span><span>Shu dõppidan topa olmayapman</span>
+                  <div class="d-flex">
+                    <a class="me-2" href="#">like</a>
+                    <a href="#">reply</a>
+                  </div>
+                </div>
+                <div class="user__name">
+                  <img class="modal__right-img" src="img/scromny.jpg" alt="">
+                  <span>scromny_01</span><span>Shu dõppidan topa olmayapman</span>
+                  <div class="d-flex">
+                    <a class="me-2" href="#">like</a>
+                    <a href="#">reply</a>
+                  </div>
+                </div>
+                <div class="user__name">
+                  <img class="modal__right-img" src="img/sattor.jpg" alt="">
+                  <span>abdusattor_ibroximov</span><span>Shu dõppidan topa olmayapman</span>
+                  <div class="d-flex">
+                    <a class="me-2" href="#">like</a>
+                    <a href="#">reply</a>
+                  </div>
+                </div>
+                <div class="user__name">
+                  <img class="modal__right-img" src="img/bilol.jpg" alt="">
+                  <span>bilol_2704</span><span>Shu dõppidan topa olmayapman</span>
+                  <div class="d-flex">
+                    <a class="me-2" href="#">like</a>
+                    <a href="#">reply</a>
+                  </div>
+                </div>
+                <div class="user__name">
+                  <img class="modal__right-img" src="img/scromny.jpg" alt="">
+                  <span>scromny_01</span><span>Shu dõppidan topa olmayapman</span>
+                  <div class="d-flex">
+                    <a class="me-2" href="#">like</a>
+                    <a href="#">reply</a>
+                  </div>
+                </div>
+                <div class="user__name">
+                  <img class="modal__right-img" src="img/sattor.jpg" alt="">
+                  <span>abdusattor_ibroximov</span><span>Shu dõppidan topa olmayapman</span>
+                  <div class="d-flex">
+                    <a class="me-2" href="#">like</a>
+                    <a href="#">reply</a>
+                  </div>
+                </div>
+                <div class="user__name">
+                  <img class="modal__right-img" src="img/bilol.jpg" alt="">
+                  <span>bilol_2704</span><span>Shu dõppidan topa olmayapman</span>
+                  <div class="d-flex">
+                    <a class="me-2" href="#">like</a>
+                    <a href="#">reply</a>
+                  </div>
+                </div> <div class="user__name">
+                  <img class="modal__right-img" src="img/scromny.jpg" alt="">
+                  <span>scromny_01</span><span>Shu dõppidan topa olmayapman</span>
+                  <div class="d-flex">
+                    <a class="me-2" href="#">like</a>
+                    <a href="#">reply</a>
+                  </div>
+                </div>
+                <div class="user__name">
+                  <img class="modal__right-img" src="img/sattor.jpg" alt="">
+                  <span>abdusattor_ibroximov</span><span>Shu dõppidan topa olmayapman</span>
+                  <div class="d-flex">
+                    <a class="me-2" href="#">like</a>
+                    <a href="#">reply</a>
+                  </div>
+                </div>
+                <div class="user__name">
+                  <img class="modal__right-img" src="img/bilol.jpg" alt="">
+                  <span>bilol_2704</span><span>Shu dõppidan topa olmayapman</span>
+                  <div class="d-flex">
+                    <a class="me-2" href="#">like</a>
+                    <a href="#">reply</a>
+                  </div>
+                </div>
+                <div class="user__name">
+                  <img class="modal__right-img" src="img/scromny.jpg" alt="">
+                  <span>scromny_01</span><span>Shu dõppidan topa olmayapman</span>
+                  <div class="d-flex">
+                    <a class="me-2" href="#">like</a>
+                    <a href="#">reply</a>
+                  </div>
+                </div>
+              </div>              
+              <footer>
+                <ul class="main__btn-list">
+                  <li><button class="likebtn" id="likebtn"><i class='bx bx-heart' ></i></button></li>
+                  <li><button><i class='bx bx-message-rounded-dots' ></i></button></li>
+                  <li><button><i class='bx bx-send' ></i></button></li>
+                </ul>
+                <span id="footer-count">777670</span>
+              </footer>
+            </div>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <script src="/main.js"></script>
