--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="modal-content" id="modal__box">
           <div class="modal__headerr">
             <div class="">
-              <img class="modal__left" src="" alt="">
+              <object class="modal__left" data="" ></object>
             </div>
             <div class="modalright">
               <div class="user__name">
